Add validation and improve error handling

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                     <select id="platform" required>
                         <option value="PC">PC</option>
                         <option value="PS5">PS5</option>
+                        <option value="PS4">PS4</option>
                         <option value="Xbox">Xbox</option>
                         <option value="Switch">Switch</option>
                         <option value="Mobile">Mobile</option>
